# advent-of-code

./: .gitignore  Cargo.toml  README.md  generate_readme.sh  run-all.nu
.hooks/: pre-commit
2023/01/: Cargo.toml
2023/01/src/: main.rs
2023/02/: Cargo.toml
2023/02/src/: main.rs
2023/03/: Cargo.toml
2023/03/src/: main.rs
2023/04/: Cargo.toml
2023/04/src/: main.rs
2023/05/: Cargo.toml
2023/05/src/: main.rs
2023/06/: Cargo.toml
2023/06/src/: main.rs
2023/07/: Cargo.toml
2023/07/src/: main.rs
2023/08/: Cargo.toml
2023/08/src/: main.rs
2023/09/: Cargo.toml
2023/09/src/: main.rs
2023/10/: Cargo.toml
2023/10/src/: main.rs
2023/11/: Cargo.toml
2023/11/src/: main.rs
2023/12/: Cargo.toml
2023/12/src/: main.rs
2023/13/: Cargo.toml
2023/13/src/: main.rs
2023/14/: Cargo.toml
2023/14/src/: main.rs
2023/15/: Cargo.toml
2023/15/src/: main.rs
2023/16/: Cargo.toml
2023/16/src/: main.rs
2023/17/: Cargo.toml
2023/17/src/: main.rs
2023/18/: Cargo.toml
2023/18/src/: main.rs
2023/19/: Cargo.toml
2023/19/src/: main.rs
2023/20/: Cargo.toml
2023/20/src/: main.rs
2025/01/: Cargo.toml
2025/01/src/: lib.rs
2025/02/: Cargo.toml
2025/02/src/: lib.rs
2025/03/: Cargo.toml
2025/03/src/: lib.rs
