[package]
name = "aoc-2025-03"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "aoc-2025-03-silver"
path = "src/bin/silver.rs"
[[bin]]
name = "aoc-2025-03-gold"
path = "src/bin/gold.rs"


[lints]
workspace = true
